# arduino-remote

./: README.md
SimpleSender/: SimpleSender.ino
logs/: README.md
net/: ArduinoReponse.cs  Program.cs  README.md  net.csproj
net/Controllers/: VolumeController.cs
net/Properties/: launchSettings.json
nim/arduino_remote/: arduino_remote.nimble
nim/arduino_remote/src/: arduino_remote.nim
py/: pyproject.toml  remote.py
py/arduino_remote_app/: .gitignore  arduino_remote.service  install-service  manage.py  restart  run  strace.sh
py/arduino_remote_app/api/: remote.py  urls.py  views.py
py/arduino_remote_app/arduino_remote_app/: asgi.py  urls.py  wsgi.py
remote/: Makefile  remote.ino
rust/remote-service/: Cargo.toml  README.md
rust/remote-service/scripts/: strace.sh
rust/remote-service/src/: arduino.rs  main.rs  volume.rs
rust/remote-service/src/volume/: arduino.rs  mod.rs
web/: index.html
web/js/: web_remote.js
