[tool.poetry]
name = "arduino-remote-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
Django = "^4.0.3"
djangorestframework = "^3.13.1"
Nuitka = "^0.7.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
